spec/grammar.ebnf
/* 
 * Sonner Studio Language (SSL) - Core Grammar Specification v0.1
 * Status: Draft
 */

/* --- Top Level Structure --- */
program         ::= statement*

statement       ::= import_stmt
                  | function_decl
                  | variable_decl
                  | assignment
                  | control_flow
                  | expression_stmt
                  | natural_block
                  | comment

/* --- Imports --- */
import_stmt     ::= "use" module_list
module_list     ::= identifier ("," identifier)*

/* --- Functions --- */
function_decl   ::= decorator* "fn" identifier "(" param_list? ")" return_type? block
param_list      ::= param ("," param)*
param           ::= identifier ":" type
return_type     ::= "->" type

decorator       ::= "@" identifier ("(" string_literal ")")?

/* --- Variables & Types --- */
variable_decl   ::= "let" identifier ("=" expression)?  /* Immutable by default */
                  | "mut" identifier ("=" expression)?  /* Mutable */

type            ::= identifier
                  | "List" "[" type "]"
                  | "Map" "[" type "," type "]"
                  | "Int" | "Float" | "String" | "Bool"

/* --- Control Flow --- */
control_flow    ::= if_stmt | for_stmt | while_stmt | return_stmt

if_stmt         ::= "if" expression block ("else" block)?
for_stmt        ::= "for" identifier "in" expression block
while_stmt      ::= "while" expression block
return_stmt     ::= "return" expression?

block           ::= ":" newline indent statement+ dedent
                  | "{" statement* "}"  /* Optional C-style blocks? Decided on Python-style for now based on prompt */

/* --- Natural Language Integration --- */
natural_block   ::= "natural" "{" natural_text "}"
natural_text    ::= (any_char)*  /* Parsed by AI Semantic Core */

/* --- Expressions --- */
expression      ::= term (operator term)*
term            ::= identifier | literal | function_call | "(" expression ")"
function_call   ::= identifier "(" arg_list? ")"
arg_list        ::= expression ("," expression)*

/* --- Literals --- */
literal         ::= integer | float | string | boolean | list_literal
list_literal    ::= "[" expression ("," expression)* "]"

/* --- Lexical Tokens (Simplified) --- */
identifier      ::= [a-zA-Z_][a-zA-Z0-9_]*
integer         ::= [0-9]+
string          ::= '"' [^"]* '"'
operator        ::= "+" | "-" | "*" | "/" | "==" | "<=" | ">=" | ".."
